samples/_failures_safe/1761622239_629d38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbc28460.c: In function ‘next_token’:
./samples/SAFE/__tmp_fbc28460.c:182:9: error: expected expression at end of input
  182 |         token->type =
      |         ^~~~~
./samples/SAFE/__tmp_fbc28460.c:182:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fbc28460.c:182:9: error: expected declaration or statement at end of input
